k8s/simple-golang-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-api
  namespace: api
spec:
  selector:
    matchLabels:
      app: go-api
  template:
    metadata:
      labels:
        app: go-api
    spec:
      containers:
      - name: go-api
        image: lustepe/simple-server-golang:v3
        ports:
          - name: "http"
            containerPort: 3000
        resources:
            requests:
              cpu: 10m
              memory: 80M
            limits:
              cpu: 20m
              memory: 160M
