k8s/simple-golang-api/service.yaml
apiVersion: v1
kind: Service 
metadata:
  name: go-api
  namespace: api
spec: # politicas de acesso ao pod
  type: ClusterIP
  selector:
    app: go-api
  ports:
    - protocol:  TCP
      port: 8086
      targetPort: "http"
