k8s/simple-golang-api/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api
  namespace: api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: / 
spec: 
  tls:
  - hosts:
    - api.lustepe.xyz
    secretName: api-tls
  rules:
    - host: api.lustepe.xyz
      http: 
        paths: 
          - pathType: Prefix
            path: /
            backend: 
              serviceName: go-api
              servicePort: 8086
